--- a/Mastering Practical Dev Challenges/03-Task/index.html
+++ b/Mastering Practical Dev Challenges/03-Task/index.html
@@ -1,1 +1,20 @@
 
+<DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+    <h3 class="text"></h3>
+    <form >
+        <input class="inp1" type="text">
+        <input class="inp2" type="text">
+        <input class="button" type="submit">
+    </form>
+
+    <script src="script.js"></script>
+</body>
+</html>
