--- a/Mastering Practical Dev Challenges/04-Task/index.html
+++ b/Mastering Practical Dev Challenges/04-Task/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
+    <ul>
+        <li>apple</li>
+    </ul>
+
+    <input type="text">
+
+    <button id="add">ADD</button>
+    <button id="remove">REMOVE</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
