--- a/Mastering Practical Dev Challenges/06-Task/index.html
+++ b/Mastering Practical Dev Challenges/06-Task/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JS Practice Like Hell Task 6</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
+    <div id="tabs">
+        <div id="home" class="tab">Home</div>
+        <div id="about" class="tab">About</div>
+        <div id="contact" class="tab">Contact Us</div>
+    </div>
+
+    <h3 id="homeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, aliquid repellendus, cupiditate voluptatum animi atque facere deleniti voluptatibus soluta tempora assumenda harum non sed enim autem dolorum labore fuga voluptates.</h3>
+
+    <h3 id="aboutText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. At recusandae sunt autem ipsum necessitatibus ad iste, perspiciatis iure, perferendis similique culpa dolorem cumque rerum neque quae esse possimus exercitationem dignissimos nesciunt magni obcaecati ut? Molestiae vitae laborum numquam voluptatem animi. Facilis dolorem iusto ad debitis praesentium? Perferendis sint temporibus iste aliquam ipsam, tempore atque iusto animi maiores adipisci ea rerum quas, qui cumque pariatur optio blanditiis! Numquam, maxime dolorem officiis tempora sed assumenda esse temporibus hic, modi quisquam quae ratione quo velit qui aspernatur quibusdam facilis eius tenetur? Debitis provident quos nesciunt aliquid deleniti impedit est, aperiam vel omnis doloremque possimus eligendi, dolores quidem, veritatis enim quam? Doloremque veritatis dicta ea laudantium distinctio qui voluptates quod. Iure odit quibusdam a adipisci amet consectetur dolore, eos reprehenderit sint, obcaecati impedit rerum! Minima dolor cumque officiis ab illum facilis. Sint autem quaerat optio cumque! Officiis totam deserunt voluptate enim quo id natus neque laborum pariatur similique labore consequatur nulla fugit eos numquam quaerat laudantium laboriosam animi, non adipisci sit dignissimos! Veritatis asperiores quasi, fuga recusandae hic necessitatibus ab repudiandae doloremque doloribus at est quo ducimus dolore omnis nam ipsa commodi nisi eaque totam sunt voluptas? Nam modi nostrum repudiandae ad alias at doloribus excepturi, sapiente explicabo earum illum perferendis, aperiam tempora. Laboriosam dolorum, commodi quibusdam tenetur nostrum possimus ipsa facilis quaerat quidem corrupti dolores perspiciatis sunt mollitia? Ipsam provident nesciunt cupiditate. Neque.</h3>
+
+    <h3 id="contactText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, doloremque hic repellat voluptate magnam rem provident ut, temporibus voluptatibus et iure fuga a quaerat, tempora quo voluptatem! Illo magnam sed est dolorum commodi molestias, eaque temporibus voluptatibus quos tempora deleniti minima harum, omnis reiciendis impedit quidem! Asperiores itaque in omnis.</h3>
+
+    <script src="script.js"></script>
+    
+  </body>
+</html>
