--- a/Mastering Practical Dev Challenges/09-Task/index.html
+++ b/Mastering Practical Dev Challenges/09-Task/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
+  <h1>count <span id="counter">0</span></h1>
+  <textarea name="textarea" id="txtarea"></textarea>
+
+    <script src="script.js"></script>
+</body>
+</html>
