--- a/Mastering Practical Dev Challenges/11-Task/index.html
+++ b/Mastering Practical Dev Challenges/11-Task/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-900 text-white p-5">
 
+    <h2 id="status">Status: <span>Not Blocked</span></h2>
+    <button id="block" class="bg-green-500 px-4 py-2 rounded">Block</button>
+    <button id="unblock" class="bg-green-500 px-4 py-2 rounded">UN-Block</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
